Always show scrollbar to prevent jumpiness

--- a/src/views/_app/App.scss
+++ b/src/views/_app/App.scss
@@ -12,6 +12,10 @@
   }
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   -webkit-font-smoothing: antialiased;
 }
